// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verify Authenticator Selector Transformer Tests should add UI elements for verification authenticator selector when in password recovery flow 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.reset.title.generic",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.password.reset.verification",
        },
        "type": "Description",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "key": "okta_email",
                "step": "select-authenticator-authenticate",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-verify-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Verify Authenticator Selector Transformer Tests should add UI elements for verification authenticator selector when in password recovery flow and brand name is provided 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.reset.title.specific",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.password.reset.verification",
        },
        "type": "Description",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "key": "okta_email",
                "step": "select-authenticator-authenticate",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-verify-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Verify Authenticator Selector Transformer Tests should add UI elements for verification authenticator selector when not in password recovery flow 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.verify.subtitle",
        },
        "type": "Description",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "key": "okta_email",
                "step": "select-authenticator-authenticate",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-verify-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
